v1.1.0/modules/schema/pages/class/OldTransformerEndInfo.adoc
= `OldTransformerEndInfo`
:toclevels: 4



[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:OldTransformerEndInfo`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/AssetInfo.adoc[`AssetInfo`]
*** xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]
**** *`OldTransformerEndInfo`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<dayOverLoadRating,`dayOverLoadRating`>>
//| [[slots_table.dayOverLoadRating]]<<dayOverLoadRating,`dayOverLoadRating`>>
| 0..1 +
xref::class/ApparentPower.adoc[`ApparentPower`]
| +++Overload rating for 24 hours.+++
| _n/a_

| <<hourOverLoadRating,`hourOverLoadRating`>>
//| [[slots_table.hourOverLoadRating]]<<hourOverLoadRating,`hourOverLoadRating`>>
| 0..1 +
xref::class/ApparentPower.adoc[`ApparentPower`]
| +++Overload rating for 1 hour.+++
| _n/a_

| <<solidInsulationWeight,`solidInsulationWeight`>>
//| [[slots_table.solidInsulationWeight]]<<solidInsulationWeight,`solidInsulationWeight`>>
| 0..1 +
xref::class/Mass.adoc[`Mass`]
| +++Weight of solid insultation in transformer.+++
| _n/a_

| <<windingInsulationKind,`windingInsulationKind`>>
//| [[slots_table.windingInsulationKind]]<<windingInsulationKind,`windingInsulationKind`>>
| 0..1 +
xref::enumeration/WindingInsulationKind.adoc[`WindingInsulationKind`]
| +++Type of insultation used for transformer windings.+++
| _n/a_

| <<CoreAdmittance,`CoreAdmittance`>>
//| [[slots_table.CoreAdmittance]]<<CoreAdmittance,`CoreAdmittance`>>
| 0..1 +
xref::class/TransformerCoreAdmittance.adoc[`TransformerCoreAdmittance`]
| +++Core admittance calculated from this transformer end datasheet, representing magnetising current and core losses. The full...+++
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]

| <<EnergisedEndNoLoadTests,`EnergisedEndNoLoadTests`>>
//| [[slots_table.EnergisedEndNoLoadTests]]<<EnergisedEndNoLoadTests,`EnergisedEndNoLoadTests`>>
| 0..* +
xref::class/NoLoadTest.adoc[`NoLoadTest`]
| +++All no-load test measurements in which this transformer end was energised.+++
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]

| <<EnergisedEndOpenCircuitTests,`EnergisedEndOpenCircuitTests`>>
//| [[slots_table.EnergisedEndOpenCircuitTests]]<<EnergisedEndOpenCircuitTests,`EnergisedEndOpenCircuitTests`>>
| 0..* +
xref::class/OpenCircuitTest.adoc[`OpenCircuitTest`]
| +++All open-circuit test measurements in which this transformer end was excited.+++
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]

| <<EnergisedEndShortCircuitTests,`EnergisedEndShortCircuitTests`>>
//| [[slots_table.EnergisedEndShortCircuitTests]]<<EnergisedEndShortCircuitTests,`EnergisedEndShortCircuitTests`>>
| 0..* +
xref::class/ShortCircuitTest.adoc[`ShortCircuitTest`]
| +++All short-circuit test measurements in which this transformer end was energised.+++
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]

| <<FromMeshImpedances,`FromMeshImpedances`>>
//| [[slots_table.FromMeshImpedances]]<<FromMeshImpedances,`FromMeshImpedances`>>
| 0..* +
xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]
| +++All mesh impedances between this 'to' and other 'from' transformer ends.+++
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]

| <<GroundedEndShortCircuitTests,`GroundedEndShortCircuitTests`>>
//| [[slots_table.GroundedEndShortCircuitTests]]<<GroundedEndShortCircuitTests,`GroundedEndShortCircuitTests`>>
| 0..* +
xref::class/ShortCircuitTest.adoc[`ShortCircuitTest`]
| +++All short-circuit test measurements in which this transformer end was short-circuited.+++
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]

| <<OpenEndOpenCircuitTests,`OpenEndOpenCircuitTests`>>
//| [[slots_table.OpenEndOpenCircuitTests]]<<OpenEndOpenCircuitTests,`OpenEndOpenCircuitTests`>>
| 0..* +
xref::class/OpenCircuitTest.adoc[`OpenCircuitTest`]
| +++All open-circuit test measurements in which this transformer end was not excited.+++
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]

| <<ToMeshImpedances,`ToMeshImpedances`>>
//| [[slots_table.ToMeshImpedances]]<<ToMeshImpedances,`ToMeshImpedances`>>
| 0..* +
xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]
| +++All mesh impedances between this 'from' and other 'to' transformer ends.+++
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]

| <<TransformerStarImpedance,`TransformerStarImpedance`>>
//| [[slots_table.TransformerStarImpedance]]<<TransformerStarImpedance,`TransformerStarImpedance`>>
| 0..1 +
xref::class/TransformerStarImpedance.adoc[`TransformerStarImpedance`]
| +++Transformer star impedance calculated from this transformer end datasheet.+++
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]

| <<TransformerTankInfo,`TransformerTankInfo`>>
//| [[slots_table.TransformerTankInfo]]<<TransformerTankInfo,`TransformerTankInfo`>>
| 1 +
xref::class/TransformerTankInfo.adoc[`TransformerTankInfo`]
| +++Transformer tank data that this end description is part of.+++
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]

| <<connectionKind,`connectionKind`>>
//| [[slots_table.connectionKind]]<<connectionKind,`connectionKind`>>
| 0..1 +
xref::enumeration/WindingConnection.adoc[`WindingConnection`]
| +++Kind of connection.+++
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]

| <<emergencyS,`emergencyS`>>
//| [[slots_table.emergencyS]]<<emergencyS,`emergencyS`>>
| 0..1 +
xref::class/ApparentPower.adoc[`ApparentPower`]
| +++Apparent power that the winding can carry under emergency conditions (also called long-term emergency power).+++
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]

| <<endNumber,`endNumber`>>
//| [[slots_table.endNumber]]<<endNumber,`endNumber`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Number for this transformer end, corresponding to the end's order in the PowerTransformer.vectorGroup attribute. Highest...+++
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]

| <<insulationU,`insulationU`>>
//| [[slots_table.insulationU]]<<insulationU,`insulationU`>>
| 0..1 +
xref::class/Voltage.adoc[`Voltage`]
| +++Basic insulation level voltage rating.+++
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]

| <<phaseAngleClock,`phaseAngleClock`>>
//| [[slots_table.phaseAngleClock]]<<phaseAngleClock,`phaseAngleClock`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Winding phase angle where 360 degrees are represented with clock hours, so the valid values are {0, ..., 11}. For example,...+++
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]

| <<r,`r`>>
//| [[slots_table.r]]<<r,`r`>>
| 0..1 +
xref::class/Resistance.adoc[`Resistance`]
| +++DC resistance.+++
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]

| <<ratedS,`ratedS`>>
//| [[slots_table.ratedS]]<<ratedS,`ratedS`>>
| 0..1 +
xref::class/ApparentPower.adoc[`ApparentPower`]
| +++Normal apparent power rating.+++
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]

| <<ratedU,`ratedU`>>
//| [[slots_table.ratedU]]<<ratedU,`ratedU`>>
| 0..1 +
xref::class/Voltage.adoc[`Voltage`]
| +++Rated voltage: phase-phase for three-phase windings, and either phase-phase or phase-neutral for single-phase windings.+++
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]

| <<shortTermS,`shortTermS`>>
//| [[slots_table.shortTermS]]<<shortTermS,`shortTermS`>>
| 0..1 +
xref::class/ApparentPower.adoc[`ApparentPower`]
| +++Apparent power that this winding can carry for a short period of time (in emergency).+++
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]

| <<Assets,`Assets`>>
//| [[slots_table.Assets]]<<Assets,`Assets`>>
| 0..* +
xref::class/Asset.adoc[`Asset`]
| +++All assets described by this data.+++
| xref::class/AssetInfo.adoc[`AssetInfo`]

| <<CatalogAssetType,`CatalogAssetType`>>
//| [[slots_table.CatalogAssetType]]<<CatalogAssetType,`CatalogAssetType`>>
| 0..1 +
xref::class/CatalogAssetType.adoc[`CatalogAssetType`]
| +++Asset information (nameplate) for this catalog asset type.+++
| xref::class/AssetInfo.adoc[`AssetInfo`]

| <<PowerSystemResources,`PowerSystemResources`>>
//| [[slots_table.PowerSystemResources]]<<PowerSystemResources,`PowerSystemResources`>>
| 0..* +
xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
| +++All power system resources with this datasheet information.+++
| xref::class/AssetInfo.adoc[`AssetInfo`]

| <<ProductAssetModel,`ProductAssetModel`>>
//| [[slots_table.ProductAssetModel]]<<ProductAssetModel,`ProductAssetModel`>>
| 0..1 +
xref::class/ProductAssetModel.adoc[`ProductAssetModel`]
| +++Product asset model which conforms to this catalog asset type.+++
| xref::class/AssetInfo.adoc[`AssetInfo`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Assets]
=== `Assets`
+++All assets described by this data.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

////
[.text-left]
--
<<slots_table.Assets,&#10548;>>
--
////


//[discrete]
[#CatalogAssetType]
=== `CatalogAssetType`
+++Asset information (nameplate) for this catalog asset type.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.CatalogAssetType`
| Cardinality
| 0..1
| Type
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

////
[.text-left]
--
<<slots_table.CatalogAssetType,&#10548;>>
--
////


//[discrete]
[#connectionKind]
=== `connectionKind`
+++Kind of connection.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.connectionKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/WindingConnection.adoc[`WindingConnection`]

| Inherited from
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.connectionKind,&#10548;>>
--
////


//[discrete]
[#CoreAdmittance]
=== `CoreAdmittance`
+++Core admittance calculated from this transformer end datasheet, representing magnetising current and core losses. The full values of the transformer should be supplied for one transformer end info only.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.CoreAdmittance`
| Cardinality
| 0..1
| Type
| xref::class/TransformerCoreAdmittance.adoc[`TransformerCoreAdmittance`]

| Inherited from
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.CoreAdmittance,&#10548;>>
--
////


//[discrete]
[#dayOverLoadRating]
=== `dayOverLoadRating`
+++Overload rating for 24 hours.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:OldTransformerEndInfo.dayOverLoadRating`
| Cardinality
| 0..1
| Type
| xref::class/ApparentPower.adoc[`ApparentPower`]


|===

////
[.text-left]
--
<<slots_table.dayOverLoadRating,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#emergencyS]
=== `emergencyS`
+++Apparent power that the winding can carry under emergency conditions (also called long-term emergency power).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.emergencyS`
| Cardinality
| 0..1
| Type
| xref::class/ApparentPower.adoc[`ApparentPower`]

| Inherited from
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.emergencyS,&#10548;>>
--
////


//[discrete]
[#endNumber]
=== `endNumber`
+++Number for this transformer end, corresponding to the end's order in the PowerTransformer.vectorGroup attribute. Highest voltage winding should be 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.endNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.endNumber,&#10548;>>
--
////


//[discrete]
[#EnergisedEndNoLoadTests]
=== `EnergisedEndNoLoadTests`
+++All no-load test measurements in which this transformer end was energised.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.EnergisedEndNoLoadTests`
| Cardinality
| 0..*
| Type
| xref::class/NoLoadTest.adoc[`NoLoadTest`]

| Inherited from
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.EnergisedEndNoLoadTests,&#10548;>>
--
////


//[discrete]
[#EnergisedEndOpenCircuitTests]
=== `EnergisedEndOpenCircuitTests`
+++All open-circuit test measurements in which this transformer end was excited.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.EnergisedEndOpenCircuitTests`
| Cardinality
| 0..*
| Type
| xref::class/OpenCircuitTest.adoc[`OpenCircuitTest`]

| Inherited from
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.EnergisedEndOpenCircuitTests,&#10548;>>
--
////


//[discrete]
[#EnergisedEndShortCircuitTests]
=== `EnergisedEndShortCircuitTests`
+++All short-circuit test measurements in which this transformer end was energised.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.EnergisedEndShortCircuitTests`
| Cardinality
| 0..*
| Type
| xref::class/ShortCircuitTest.adoc[`ShortCircuitTest`]

| Inherited from
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.EnergisedEndShortCircuitTests,&#10548;>>
--
////


//[discrete]
[#FromMeshImpedances]
=== `FromMeshImpedances`
+++All mesh impedances between this 'to' and other 'from' transformer ends.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.FromMeshImpedances`
| Cardinality
| 0..*
| Type
| xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]

| Inherited from
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.FromMeshImpedances,&#10548;>>
--
////


//[discrete]
[#GroundedEndShortCircuitTests]
=== `GroundedEndShortCircuitTests`
+++All short-circuit test measurements in which this transformer end was short-circuited.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.GroundedEndShortCircuitTests`
| Cardinality
| 0..*
| Type
| xref::class/ShortCircuitTest.adoc[`ShortCircuitTest`]

| Inherited from
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.GroundedEndShortCircuitTests,&#10548;>>
--
////


//[discrete]
[#hourOverLoadRating]
=== `hourOverLoadRating`
+++Overload rating for 1 hour.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:OldTransformerEndInfo.hourOverLoadRating`
| Cardinality
| 0..1
| Type
| xref::class/ApparentPower.adoc[`ApparentPower`]


|===

////
[.text-left]
--
<<slots_table.hourOverLoadRating,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#insulationU]
=== `insulationU`
+++Basic insulation level voltage rating.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.insulationU`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]

| Inherited from
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.insulationU,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#OpenEndOpenCircuitTests]
=== `OpenEndOpenCircuitTests`
+++All open-circuit test measurements in which this transformer end was not excited.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.OpenEndOpenCircuitTests`
| Cardinality
| 0..*
| Type
| xref::class/OpenCircuitTest.adoc[`OpenCircuitTest`]

| Inherited from
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.OpenEndOpenCircuitTests,&#10548;>>
--
////


//[discrete]
[#phaseAngleClock]
=== `phaseAngleClock`
+++Winding phase angle where 360 degrees are represented with clock hours, so the valid values are {0, ..., 11}. For example, to express the second winding in code 'Dyn11', set attributes as follows: 'endNumber'=2, 'connectionKind' = Yn and 'phaseAngleClock' = 11.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.phaseAngleClock`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.phaseAngleClock,&#10548;>>
--
////


//[discrete]
[#PowerSystemResources]
=== `PowerSystemResources`
+++All power system resources with this datasheet information.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.PowerSystemResources`
| Cardinality
| 0..*
| Type
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

////
[.text-left]
--
<<slots_table.PowerSystemResources,&#10548;>>
--
////


//[discrete]
[#ProductAssetModel]
=== `ProductAssetModel`
+++Product asset model which conforms to this catalog asset type.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.ProductAssetModel`
| Cardinality
| 0..1
| Type
| xref::class/ProductAssetModel.adoc[`ProductAssetModel`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

////
[.text-left]
--
<<slots_table.ProductAssetModel,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#r]
=== `r`
+++DC resistance.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.r`
| Cardinality
| 0..1
| Type
| xref::class/Resistance.adoc[`Resistance`]

| Inherited from
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.r,&#10548;>>
--
////


//[discrete]
[#ratedS]
=== `ratedS`
+++Normal apparent power rating.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.ratedS`
| Cardinality
| 0..1
| Type
| xref::class/ApparentPower.adoc[`ApparentPower`]

| Inherited from
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.ratedS,&#10548;>>
--
////


//[discrete]
[#ratedU]
=== `ratedU`
+++Rated voltage: phase-phase for three-phase windings, and either phase-phase or phase-neutral for single-phase windings.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.ratedU`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]

| Inherited from
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.ratedU,&#10548;>>
--
////


//[discrete]
[#shortTermS]
=== `shortTermS`
+++Apparent power that this winding can carry for a short period of time (in emergency).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.shortTermS`
| Cardinality
| 0..1
| Type
| xref::class/ApparentPower.adoc[`ApparentPower`]

| Inherited from
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.shortTermS,&#10548;>>
--
////


//[discrete]
[#solidInsulationWeight]
=== `solidInsulationWeight`
+++Weight of solid insultation in transformer.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:OldTransformerEndInfo.solidInsulationWeight`
| Cardinality
| 0..1
| Type
| xref::class/Mass.adoc[`Mass`]


|===

////
[.text-left]
--
<<slots_table.solidInsulationWeight,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#ToMeshImpedances]
=== `ToMeshImpedances`
+++All mesh impedances between this 'from' and other 'to' transformer ends.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.ToMeshImpedances`
| Cardinality
| 0..*
| Type
| xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]

| Inherited from
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.ToMeshImpedances,&#10548;>>
--
////


//[discrete]
[#TransformerStarImpedance]
=== `TransformerStarImpedance`
+++Transformer star impedance calculated from this transformer end datasheet.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.TransformerStarImpedance`
| Cardinality
| 0..1
| Type
| xref::class/TransformerStarImpedance.adoc[`TransformerStarImpedance`]

| Inherited from
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.TransformerStarImpedance,&#10548;>>
--
////


//[discrete]
[#TransformerTankInfo]
=== `TransformerTankInfo`
+++Transformer tank data that this end description is part of.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.TransformerTankInfo`
| Cardinality
| 1
| Type
| xref::class/TransformerTankInfo.adoc[`TransformerTankInfo`]

| Inherited from
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.TransformerTankInfo,&#10548;>>
--
////


//[discrete]
[#windingInsulationKind]
=== `windingInsulationKind`
+++Type of insultation used for transformer windings.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:OldTransformerEndInfo.windingInsulationKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/WindingInsulationKind.adoc[`WindingInsulationKind`]


|===

////
[.text-left]
--
<<slots_table.windingInsulationKind,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
